tests/file_SyntaxError/file_SyntaxError_4_expected.txt
[36mtests/file_SyntaxError/file_SyntaxError_4.ml:5 23-24
[0m2 |   path: string;
3 |   messages: message list;
4 | }
5 | type output = file list[31m;[0m
                           ^

The syntax is wrong.
Semicolon can be tricky!
Note: the location indicated might not be accurate.
